--- a/Tagging/Views/MainWindow.xaml
+++ b/Tagging/Views/MainWindow.xaml
@@ -5,8 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Tagging"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Tagging" Height="450" Width="800">
     <Grid>
+        <DataGrid Name="TagsDataGrid">
+            
+        </DataGrid>
         
     </Grid>
 </Window>
