Linked the project to CHiDateTimeWeekNumber

--- a/Tagging/Views/TagIdToDateWindow.xaml
+++ b/Tagging/Views/TagIdToDateWindow.xaml
@@ -27,6 +27,7 @@
             <TextBox Name="TagIdTextBox"
                      Height="17"
                      Width="75"
+                     ToolTip="Format the TagId as 'yywwD'"
                      VerticalAlignment="Center"/>
             <Button Name="GetDate"
                     Content="*"
