--- a/Tagging/Views/EditWindow.xaml
+++ b/Tagging/Views/EditWindow.xaml
@@ -42,6 +42,7 @@
                              FormatString="yyyy-MM-dd HH:mm"
                              HorizontalAlignment="Left"
                              Width="137"
+                             Margin="0,0,0,5"
                              Grid.Column="1"
                              Grid.Row="0" 
                              ValueChanged="DateDateTimePicker_ValueChanged"/>
